[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy_route"
version = "0.0.1"
authors = [
  { name="Simone Nicol", email="en0mia.dev@gmail.com" },
]
description = "A simple Flask routing package."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/en0mia/easy-route"
"Bug Tracker" = "https://github.com/en0mia/easy-route/issues"